# flowcrafter

./: .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  action.yml
.github/: flowcrafter.yml
.github/workflows/: crates.yml  flowcrafter.yml  json.yml  markdown.yml  release.yml  rust.yml  yaml.yml
src/: error.rs  lib.rs  main.rs  project.rs  renderer.rs  template.rs  workflow.rs
src/cli/: error.rs  mod.rs  project.rs
src/cli/commands/: create.rs  init.rs  mod.rs  update.rs
src/cli/configuration/: library.rs  mod.rs  workflow.rs
src/flowcrafter/: Cargo.toml
src/flowcrafter-cli/: Cargo.toml
src/flowcrafter-cli/src/: cli.rs  main.rs
src/flowcrafter-cli/src/commands/: create.rs  init.rs  mod.rs
src/flowcrafter/src/: configuration.rs  error.rs  job.rs  lib.rs  library.rs  template.rs  workflow.rs
src/fragment/: builder.rs  error.rs  library.rs  mod.rs
src/github/: configuration.rs  library.rs  mod.rs  owner.rs  repository.rs
src/github/configuration/: builder.rs  mod.rs
src/local/: configuration.rs  library.rs  mod.rs
