[package]
name = "flowcrafter"

version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Create and manage workflows for GitHub Actions"
repository = "https://github.com/jdno/flowcrafter"

default-run = "flowcrafter"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = [
    "clap",
    "serde",
    "serde_yaml",
]

[[bin]]
name = "flowcrafter"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
base64 = "0.21.5"
clap = { version = "4.4.8", optional = true, features = ["derive"] }
octocrab = "0.32.0"
serde = { version = "1.0.190", optional = true, features = ["derive"] }
serde_yaml = { version = "0.9.27", optional = true }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.18.0"
url = "2.4.1"

[dev-dependencies]
indoc = "2.0.4"
mockito = "1.2.0"
serde_json = "1.0.108"
tempfile = "3.8.1"
serde_yaml = { version = "0.9.27" }
