[package]
name = "flowcrafter"

version = "0.3.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Create and manage workflows for GitHub Actions"
repository = "https://github.com/jdno/flowcrafter"

default-run = "flowcrafter"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = [
    "clap",
    "serde",
    "serde_yaml",
]

[[bin]]
name = "flowcrafter"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.74"
base64 = "0.21.5"
clap = { version = "4.4.11", optional = true, features = ["derive"] }
octocrab = "0.32.0"
indoc = "2.0.4"
serde = { version = "1.0.193", optional = true, features = ["derive"] }
serde_yaml = { version = "0.9.28", optional = true }
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.18.0"
url = "2.5.0"

[dev-dependencies]
mockito = "1.2.0"
serde_json = "1.0.108"
tempfile = "3.8.1"
serde_yaml = { version = "0.9.28" }

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
allow-dirty = ["ci"]
cargo-dist-version = "0.6.0"
create-release = false
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
ci = ["github"]
pr-run-mode = "plan"
