[package]
name = "flowcrafter"

version = "0.3.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Create and manage workflows for GitHub Actions"
repository = "https://github.com/jdno/flowcrafter"

default-run = "flowcrafter"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = [
    "clap",
    "serde",
    "serde_yaml",
]

[[bin]]
name = "flowcrafter"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
base64 = "0.21.7"
clap = { version = "4.4.18", optional = true, features = ["derive"] }
octocrab = "0.34.0"
indoc = "2.0.4"
serde = { version = "1.0.196", optional = true, features = ["derive"] }
serde_yaml = { version = "0.9.31", optional = true }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.18.1"
url = "2.5.0"

[dev-dependencies]
mockito = "1.2.0"
serde_json = "1.0.113"
tempfile = "3.10.0"
serde_yaml = { version = "0.9.31" }

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
allow-dirty = ["ci"]
cargo-dist-version = "0.6.0"
create-release = false
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
ci = ["github"]
pr-run-mode = "plan"
