[package]
name = "flowcrafter"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
octocrab = { version = "0.19.0", features = ["rustls"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
url = "2.3.1"
yaml-rust = "0.4.5"

[dev-dependencies]
indoc = "2.0.1"
mockito = "1.0.2"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
